# vernala-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ngiemboon_words_letter_a.json  page_source.html  pyproject.toml
.github/: pull_request_template
.github/workflows/: test-runner.yml
notebooks/: eda_dictionary.py  exploration.py
src/: main.py
src/app/: dependencies.py  main.py  models.py
src/app/routes/: languages_router.py  translate_router.py
src/app/services/: __init__.py  language_service.py  translation_service.py
src/cli/: main.py
src/cli/scrapers/: api.py  languages.py  parser.py  serializer.py
src/core/: logger.py
src/db/: __init__.py  database.py  migrate.py
src/db/query_builders/: __init__.py  base.py  language_query_builder.py  translation_query_builder.py
src/db/repositories/: __init__.py  base.py  language_repository.py  stats_repository.py  translation_repository.py
src/scrapers/: api.py  config.py  languages.py  models.py  ngiemboon_scraper.py  parser.py  scraper.py  serializer.py
tests/: conftest.py  test_api.py  test_db.py  test_language_service.py  test_pagination.py  test_parser.py  test_parser_languages.py  test_query_builders.py  test_repositories.py  test_translation_service.py  test_url_building.py
